Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/Interaction_Assignment_Rules__c.object-meta.xml
<CustomObject>
    <description>Interaction Assignment Rules: This is the table of rules that is used to handle assignments (for Lead Interactions) but can be expanded to be used by other assignments in the future</description>
    <label>Interaction Assignment Rules</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Interaction Assignment Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>