Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;#ALL&quot;</defaultValue>
    <description>Countries used for matching against. Multiple values are comma separated (no spaces needed after comma)</description>
    <inlineHelpText>Enter the country used for this rule. Multiple values are comma separated (no spaces needed after comma)</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>