Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/fxQueueName__c.field-meta.xml
<CustomField>
    <fullName>fxQueueName__c</fullName>
    <description>This formula will get the Queue name or user email address</description>
    <formula>CASE (LEFT(OwnerId,3),
&quot;00G&quot;,  Owner:Queue.QueueName,
&quot;005&quot;,  Owner:User.Username,
 &quot;no group or user&quot;
)</formula>
    <inlineHelpText>The Queue Name or User Email Address</inlineHelpText>
    <label>fxQueueName</label>
    <type>Text</type>
</CustomField>