Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/fxRuleParams__c.field-meta.xml
<CustomField>
    <fullName>fxRuleParams__c</fullName>
    <description>This will create a string to show what parameters this rule expects (i.e. RCSAPLPC) or when not present, and &quot;x&quot; is used in it&#39;s place (i.e. RPSxxPC). Used in L.FLOW 4100</description>
    <formula>IF(Country__c=&quot;[ALL]&quot;,&quot;x-&quot;,&quot;C-&quot;) &amp; 
IF(State__c=&quot;[ALL]&quot;,&quot;x-&quot;,&quot;S-&quot;) &amp;
IF(PostalCode__c=&quot;[ALL]&quot;,&quot;x-&quot;,&quot;Z-&quot;) &amp;

IF(INCLUDES(SolutionsAreaofInterest__c,&quot;[ALL]&quot;),&quot;x-&quot;,&quot;A-&quot;) &amp; 
IF(INCLUDES(ProductLine__c,&quot;[ALL]&quot;),&quot;x-&quot;,&quot;PL-&quot;) &amp;
IF(INCLUDES(ProductClass__c,&quot;[ALL]&quot;),&quot;x-&quot;,&quot;PC&quot;)</formula>
    <inlineHelpText>This shows what parameters are used in this rule</inlineHelpText>
    <label>fxRuleParams</label>
    <type>Text</type>
</CustomField>