Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/fxRuleParamsBlank__c.field-meta.xml
<CustomField>
    <fullName>fxRuleParamsBlank__c</fullName>
    <description>This formula will identify what parameters are blank on a rule and can be of any value</description>
    <formula>IF(Country__c=&quot;[NULL]&quot;,&quot;C-&quot;,&quot;x-&quot;) &amp; 
IF(State__c=&quot;[NULL]&quot;,&quot;S-&quot;,&quot;x-&quot;) &amp;
IF(PostalCode__c=&quot;[NULL]&quot;,&quot;Z-&quot;,&quot;x-&quot;) &amp;

IF(INCLUDES(SolutionsAreaofInterest__c,&quot;[NULL]&quot;),&quot;A-&quot;,&quot;x-&quot;) &amp; 
IF(INCLUDES(ProductLine__c,&quot;[NULL]&quot;),&quot;PL-&quot;,&quot;x-&quot;) &amp;
IF(INCLUDES(ProductClass__c,&quot;[NULL]&quot;),&quot;PC&quot;,&quot;x-&quot;)</formula>
    <inlineHelpText>These parameters are not used in this rule</inlineHelpText>
    <label>fxRuleParamsBlank</label>
    <type>Text</type>
</CustomField>