Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/fxRuleWeight__c.field-meta.xml
<CustomField>
    <fullName>fxRuleWeight__c</fullName>
    <description>This will check to see how many fields contain criteria so we can weight the rule biggest to smallest integert</description>
    <formula>/* How many fields contain criteria? 1 - 6*/

IF(Region__c=&quot;#ALL&quot;,0,1) + 
IF(Country__c=&quot;#ALL&quot;,0,1) + 
IF(State__c=&quot;#ALL&quot;,0,1) + 
IF(PostalCode__c =&quot;#ALL&quot;,0,1) + 
IF(INCLUDES(SolutionsAreaofInterest__c,&quot;#ALL&quot;),0,1) + 
IF(INCLUDES(ProductLine__c,&quot;#ALL&quot;),0,1) + 
IF(INCLUDES(ProductClass__c,&quot;#ALL&quot;),0,1)</formula>
    <inlineHelpText>How many fields contain criteria</inlineHelpText>
    <label>fxRuleWeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>