Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This identifies if the rule is inactive</description>
    <inlineHelpText>Check the box to mark this rule as inactive and it will not be used</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>