Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <defaultValue>&quot;#ALL&quot;</defaultValue>
    <description>The postal code criteria using in the rule assignment.</description>
    <inlineHelpText>The postal code criteria using in the rule assignment. Enter as comma separated.</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>