Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <defaultValue>&quot;#ALL&quot;</defaultValue>
    <description>This value comes from Eloqua and list must include values from Eloqua, however, there is IGOR Item Class Desc on Products that can also be added to list if needed</description>
    <inlineHelpText>Select one or more product classes that are applicable to this rule</inlineHelpText>
    <label>Product Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_211_Product_Class</valueSetName>
    </valueSet>
</CustomField>