Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <defaultValue>&quot;#ALL&quot;</defaultValue>
    <description>Product lines can be found in Product Object and added to  G.PICK 210 as needed</description>
    <inlineHelpText>Choose 1 or more product lines applicable with this rule</inlineHelpText>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_210_Product_Line</valueSetName>
    </valueSet>
</CustomField>