Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/RunOrder__c.field-meta.xml
<CustomField>
    <fullName>RunOrder__c</fullName>
    <defaultValue>900.000</defaultValue>
    <description>Set a default of 900.000, the lowest number runs first in a conflict. (No need to set an overall order for all rules...just in case of conflict.</description>
    <inlineHelpText>If there are two rules with a conflict, the lowest Run Order number wins, or else the first created date wins. (Use 100, 200,300 etc  vs 1,2,3 etc  so that other numbers can be inserted in between if needed)</inlineHelpText>
    <label>Run Order</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>