Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>&quot;#ALL&quot;</defaultValue>
    <description>Leave blank for All/Any(including blanks) or Enter states(s) used in this rule. Multiple values are comma separated (no spaces needed after comma). Use a hyphen before a value to denote any value except</description>
    <inlineHelpText>Leave blank for All/Any(including blanks) or Enter states(s) used in this rule. Multiple values are comma separated (no spaces needed after comma). Use a hyphen before a value to denote any value except</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>