Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/validationRules/Limit_On_Run_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_On_Run_Order</fullName>
    <active>true</active>
    <description>This limits the Run order to be between 100 and 999</description>
    <errorConditionFormula>RunOrder__c &lt; 100 || RunOrder__c &gt;=1000</errorConditionFormula>
    <errorDisplayField>RunOrder__c</errorDisplayField>
    <errorMessage>V.RULE_INTERACTION ASSIGNMENT_RULE_001: The Run Order should be between 100 and 999, and it&#39;s best to put in increments of 100&#39;s or 10&#39;s.</errorMessage>
</ValidationRule>