Perkin-UAT/force-app/main/default/objects/Interaction_Assignment_Rules__c/listViews/ARQ_000009_Interaction_Assignment_Rules.listView-meta.xml
<ListView>
    <fullName>ARQ_000009_Interaction_Assignment_Rules</fullName>
    <filterScope>Queue</filterScope>
    <label>ARQ: EMEAI Leader</label>
    <queue>ARQ_000009</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>